--- a/SJSUelp/app/views/posts/index.html.erb
+++ b/SJSUelp/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Posts</h1>
+<h1 align="center">SJSUelp</h1>
 
-<table>
+<table align="center">
   <thead>
     <tr>
       <th>Title</th>
@@ -14,7 +14,7 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.title %></td>
+        <td><h3><%= post.title %></h3></td>
         <td><%= post.body %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
