--- a/SJSUelp/app/views/posts/show.html.erb
+++ b/SJSUelp/app/views/posts/show.html.erb
@@ -10,5 +10,29 @@
   <%= @post.body %>
 </p>
 
+<p>
+<strong>Comments</strong>
+<% @post.comments.each do |comment| %>
+  <p>
+    <b><i><%= comment.author %></i> commented:</b> 
+    <%= comment.body %>
+  </p>
+<% end %>
+</p>
+ 
+<strong>Add a comment:</strong>
+<%= form_for([@post, @post.comments.build]) do |f| %>
+  <div class="field">
+    <%= f.label :author %><br />
+    <%= f.text_field :author %>
+  </div>
+  <div class="field">
+    <%= f.label :body %><br />
+    <%= f.text_area :body %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
