--- a/Nearbite/app/views/reviews/_form.html.haml
+++ b/Nearbite/app/views/reviews/_form.html.haml
@@ -1,11 +1,11 @@
-= simple_form_for @recipe, html: { multipart: true } do |f|
-  - if @recipe.errors.any?
+= simple_form_for @review, html: { multipart: true } do |f|
+  - if @review.errors.any?
     #errors
       %p
-        = @recipe.errors.count
-        Prevented this recipe from saving
+        = @review.errors.count
+        Prevented this review from saving
       %ul
-        - @recipe.errors.full_messages.each do |msg|
+        - @review.errors.full_messages.each do |msg|
           %li=msg
   .panel-body
     = f.input :title, input_html: { class: 'form-control' }
