Added business posts functionality

--- a/Nearbite/app/views/reviews/_index.html.haml
+++ b/Nearbite/app/views/reviews/_index.html.haml
@@ -1,6 +1,6 @@
-- @review.each_slice(3) do |review|
+- @business.reviews.each_slice(3) do |review|
   .row
-    -@review.each do |review|
+    -@business.reviews.each do |review|
       .col-md-4
         .review
           .image_wrapper
