--- a/Nearbite/app/views/reviews/new.html.haml
+++ b/Nearbite/app/views/reviews/new.html.haml
@@ -1,7 +1,24 @@
 %h1 New Review
 
-= render 'form'
+= simple_form_for @review, html: { multipart: true } do |f|
+  - if @review.errors.any?
+    #errors
+      %p
+        = @review.errors.count
+        Prevented this review from saving
+      %ul
+        - @review.errors.full_messages.each do |msg|
+          %li=msg
+  .panel-body
+    = f.input :title, input_html: { class: 'form-control' }
+    = f.input :description, input_html: { class: 'form-control' }
+    = f.input :image, input_html: { class: 'form-control' }
 
+    - @url = request.original_url
+    - @bus = @url[-1,1].to_i
+
+  = f.button :submit, 'Submit Review', name: "set_bus_id", value: @bus, class: "btn btn-primary"
 %br/
 
 = link_to "Back", root_path, class: "btn btn-default"
+
