--- a/Nearbite/app/views/reviews/index.html.haml
+++ b/Nearbite/app/views/reviews/index.html.haml
@@ -1,6 +1,6 @@
-- @business.reviews.each_slice(3) do |review|
+- @reviews.each_slice(3) do |review|
   .row
-    -@business.reviews.each do |review|
+    -@reviews.each do |review|
       .col-md-4
         .review
           .image_wrapper
