Made adding a business look nicer

--- a/Nearbite/app/views/businesses/_form.html.haml
+++ b/Nearbite/app/views/businesses/_form.html.haml
@@ -10,13 +10,15 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :name
+    = f.input :name, input_html: { class: 'form-control' }
+    %br
     = f.input :category, :collection => ['Bakery', 'Bar', 'Coffee Shop', 'Fast Food', 'Food Truck', 'Restaurant'], as: :select
-    = f.input :address
+    %br
+    = f.input :address, input_html: { class: 'form-control' }
 
     -#- options = { form: f, field_names: { :country => :country_field, :state => :state_field } }
     -#= f.input :country_field, collection: CountryStateSelect.countries_collection
     -#= f.input :state_field, CountryStateSelect.state_options(options)
-
+  %br
   .form-actions
-    = f.button :submit
+    = f.button :submit, class: "btn btn-primary"
