--- a/Nearbite/app/views/businesses/edit.html.haml
+++ b/Nearbite/app/views/businesses/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @business
-\|
-= link_to 'Back', businesses_path
+= link_to 'Show', @business, class: "btn btn-default"
+
+= link_to 'Back', businesses_path, class: "btn btn-default"
