--- a/Nearbite/app/views/businesses/new.html.haml
+++ b/Nearbite/app/views/businesses/new.html.haml
@@ -1,5 +1,5 @@
 %h1 New business
 
 = render 'form'
-
-= link_to 'Back', businesses_path
+%br
+= link_to 'Back', businesses_path, class: "btn btn-default"
